# gp-code

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  log.h  main.cpp  pe.h  pe32_parser.cpp  pe32_parser.h
test/: gp.cmd
